Add PlayerQueue view (#58)
See what's in the queue
Move items
Play item (move to top)
Change Queue settings/preferences (crossfade etc)
Implement new crossfade modes

--- a/custom_components/mass/frontend/public/index.html
+++ b/custom_components/mass/frontend/public/index.html
@@ -22,6 +22,6 @@
       >
     </noscript>
     <div id="app"></div>
-    <script async="" type="module" src="mass.iife.js"></script>
+    <script async="" type="module" src="/src/main.ts"></script>
   </body>
 </html>
